--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,19 @@
-<nav class="navbar navbar-dark bg-inverse">
-  <%= link_to "Supported currencies", root_path, class: "navbar-brand" %>
-  <ul class="nav navbar-nav">
-
-    <li class="nav-item active">
-      <a class="nav-link" href="<%= new_currency_path %>">New Currency <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <%= link_to "Forecasts", root_path, class: "navbar-brand" %>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav nav-tabs">
+      <li class="nav-item active">
+        <a class="nav-link" href="<%= forecast_path(1) %>">Forecast show <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="chart-data" href="<%= new_forecast_path %>">Forecast new <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= currencies_path %>">Currencies <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
 </nav>
