--- a/app/views/forecasts/index.html.haml
+++ b/app/views/forecasts/index.html.haml
@@ -2,7 +2,7 @@
 .page-header
   %h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
 
-= link_to t('Create new forecast', default: "Create new new_forecast"), new_forecast_path, :class => 'btn btn-primary'
+= link_to "Create new forecast", new_forecast_path, :class => 'btn btn-primary'
 %table.table.table-striped
   %thead
     %tr
