--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,12 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= csrf_meta_tags %>
+  <%= yield :head_tag %>
 </head>
 
 <body>
   <%= render 'layouts/header' %>
+
   <div class="container">
       <% flash.each do |name, msg| %>
           <%= content_tag(:div, msg, class: "alert alert-info") %>
