--- a/app/views/forecasts/_forecast.html.haml
+++ b/app/views/forecasts/_forecast.html.haml
@@ -14,6 +14,9 @@
     = f.label :target_currency, class: 'control-label col-lg-2'
     = f.select :target_currency_id, options_for_select(currency_selection, selected_key = f.object.target_currency_id), class: 'form-control'
   .form-group
+    = f.label :amount, class: 'control-label col-lg-2'
+    = f.text_field :amount, class: 'form-control'
+  .form-group
     = f.label :last_forecast_date, class: 'control-label col-lg-2'
     = f.text_field :last_date, class: 'form-control', size: "16", required: true
 
