--- a/app/views/forecasts/_forecast.html.haml
+++ b/app/views/forecasts/_forecast.html.haml
@@ -7,18 +7,22 @@
       %ul
         - @forecast.errors.full_messages.each do |message|
           %li= message
-  .form-group
-    = f.label :base_currency, class: 'control-label col-lg-2'
-    = f.select :base_currency_id, options_for_select(currency_selection, selected_key = f.object.base_currency_id), class: 'form-control', required: true
-  .form-group
-    = f.label :target_currency, class: 'control-label col-lg-2'
-    = f.select :target_currency_id, options_for_select(currency_selection, selected_key = f.object.target_currency_id), class: 'form-control', required: true
-  .form-group
-    = f.label :amount, class: 'control-label col-lg-2'
-    = f.text_field :amount, class: 'form-control', required: true
-  .form-group
-    = f.label :last_forecast_date, class: 'control-label col-lg-2'
-    = f.text_field :last_date, class: 'form-control', size: "16", required: true
+  .container
+    .row
+      .col
+        .form-group
+          = f.label :base_currency, class: 'control-label col-xs-2'
+          = f.select :base_currency_id, options_for_select(currency_selection, selected_key = f.object.base_currency_id), {prompt: 'Select Base currency'}, class: 'form-control col-xs-2', required: true
+        .form-group
+          = f.label :target_currency, class: 'control-label col-xs-2'
+          = f.select :target_currency_id, options_for_select(currency_selection, selected_key = f.object.target_currency_id), {prompt: 'Select Target currency'}, class: 'form-control col-xs-2', required: true
+      .col
+        .form-group
+          = f.label :amount, class: 'control-label col-xs-2'
+          = f.text_field :amount, class: 'form-control col-xs-2', required: true
+        .form-group
+          = f.label :last_forecast_date, class: 'control-label col-xs-2'
+          = f.text_field :last_date, value: last_date_to_date(f.object.last_date), class: 'form-control col-xs-2', size: "16", required: true
 
   = render partial: 'chart'
 
