--- a/app/views/forecasts/index.html.haml
+++ b/app/views/forecasts/index.html.haml
@@ -20,8 +20,8 @@
         %td= forecast.base_curr_name
         %td= forecast.target_curr_name
         %td= forecast.base_amount
-        %td= forecast.created_at.to_date.strftime("%m/%d/%Y")
-        %td= last_date_to_date(forecast.last_date)
+        %td= forecast.created_at.to_date
+        %td= forecast.last_date
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_forecast_path(forecast), :class => 'btn btn-default btn-xs'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), forecast_path(forecast), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
