Changed aggregation from AVG to MAX, fixed validation

--- a/app/views/forecasts/_forecast_table.html.haml
+++ b/app/views/forecasts/_forecast_table.html.haml
@@ -3,7 +3,7 @@
     %thead
       %tr
         %th= "Eear, week number"
-        %th= "Used rate (average per week)"
+        %th= "Used rate (max per week)"
         %th= "Amount (#{@forecast.target_currency_name})"
         %th= "Profit / loss (#{@forecast.target_currency_name})"
         %th= "Rank"
