Added Devise auth

--- a/app/views/forecasts/_forecast_table.html.haml
+++ b/app/views/forecasts/_forecast_table.html.haml
@@ -2,7 +2,7 @@
   %table.table.table-striped
     %thead
       %tr
-        %th= "Eear, week number"
+        %th= "Year, week number"
         %th= "Used rate (max per week)"
         %th= "Amount (#{@forecast.target_currency_name})"
         %th= "Profit / loss (#{@forecast.target_currency_name})"
