--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,6 +1,6 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
-  %h2 Please sign up
+  %h3 Please sign up to the "Currency exchange advisor" service
   .container
     .row
       .col-xs-2
